objects/InnovadexData1__InnovadexRequest__c.object
<CustomObject>
    <fields>
        <fullName>InnovadexData1__Application__c</fullName>
        <description>Description of what the formulator wants to do with the product</description>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ContactByEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ContactByPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact preferred  by phone</description>
        <label>Contact By Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DatetimeStamp__c</fullName>
        <label>DatetimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DecisionMakerRole__c</fullName>
        <description>Role of the formulator user</description>
        <label>Decision Maker Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__DecisionTimeFrame__c</fullName>
        <label>Decision Time Frame</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__InnovadexID__c</fullName>
        <label>InnovadexID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Is_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__PhoneExt__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__PotentialAnnualUsage__c</fullName>
        <description>How much of the product would be required if the formulation it is being used for were to be produced</description>
        <label>Potential Annual Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Product__c</fullName>
        <label>Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ProjectApplication__c</fullName>
        <label>Project Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SampleSize__c</fullName>
        <label>Sample Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ShippingMethod__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__SupplierSupport__c</fullName>
        <description>The kind of help required from the supplier</description>
        <label>Supplier Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__TradeshowName__c</fullName>
        <label>Tradeshow Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__VolumeOfBusiness__c</fullName>
        <label>Volume Of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>